# FoundationStereo

./: .gitignore  Utils.py  justfile  pyproject.toml  readme.md
core/: extractor.py  foundation_stereo.py  geometry.py  submodule.py  update.py
core/utils/: utils.py
scripts/: extract_bag.py  make_onnx.py  run_demo.py  run_demo_batch.py  run_demo_tensorrt.py  vis_dataset.py
